--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-jest": "^27.9.0",
     "prettier": "^3.1.0",
     "prettier-eslint": "^16.1.2",
     "prop-types": "^15.8.1",
