--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-scripts": "5.0.1",
     "react-test-renderer": "^18.2.0",
     "web-vitals": "^2.1.4",
-    "yarn": "^1.22.22"
+    "yarn": "^1.22.22",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
