--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-jest": "^27.9.0",
+    "focus-formik-error": "^1.1.0",
     "formik": "^2.4.5",
     "prettier": "^3.1.0",
     "prettier-eslint": "^16.1.2",
