--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^13.5.0",
     "add": "^2.0.6",
     "axios": "^1.6.7",
+    "axios-mock-adapter": "^1.22.0",
     "dateformat": "^5.0.3",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
